--- a/index.html
+++ b/index.html
@@ -16,13 +16,33 @@
 </head>
 
 <body>
-    <section class="flexible">
+    <section>
+
+
+        <div>
+            <div class="menu">
+                <ul>
+                    <li class="logo"><img src="food/icon1.png" alt="icon"></li>
+                    <li class="active">Home</li>
+                    <li>Services</li>
+                    <li>Product</li>
+                    <li>Contact</li>
+                    <li><a class="signup-btn" href="#"> <span> Sign Up</span></a></li>
+                </ul>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="flexible">
         <div class="text-box">
             <h1>
                 <span class="add-text-color">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network
             </h1>
             <p>
-                <q> <strong> People who love to eat are always the best people.</q> - Julia Child </strong><br> <br> Eating changes everything. You don’t plan your day according to time, but what meal you’ll be eating next. Nothing should come in the way of that.
+                <q> <span id="quotes"> <strong> People who love to eat are always the best people.</q> - Julia Child </strong> </span><br> <br> Eating changes everything. You don’t plan your day according to time, but what meal you’ll be eating next. Nothing should come in the way of that.
             </p> <br>
             <a class="link-btn" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Order Food</a>
 
@@ -44,6 +64,7 @@
             </p> <br><br>
             <a class="link-btn" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Contact me</a>
         </div>
+    </div>
     </section>
 
     <section>
