updated text color

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="active">Home</li>
                     <li>Services</li>
                     <li>Product</li>
-                    <li>Contact</li>
+                    <li><a id="link-portfolio" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Contact</a></li>
                     <li><a class="signup-btn" href="#"> <span> Sign Up</span></a></li>
                 </ul>
             </div>
@@ -44,7 +44,7 @@
             <p>
                 <q> <span id="quotes"> <strong> People who love to eat are always the best people.</q> - Julia Child </strong> </span><br> <br> Eating changes everything. You don’t plan your day according to time, but what meal you’ll be eating next. Nothing should come in the way of that.
             </p> <br>
-            <a class="link-btn" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Order Food</a>
+            <a class="link-btn" target="_blank" href="https://www.foodpanda.com.bd">Order Food</a>
 
         </div>
         <div class="image-box">
@@ -62,7 +62,7 @@
             <h2>My Opinion</h2>
             <p>In my opinion, a food lover is someone who enjoys to eat (I am a food lover). A food lover, compared to a non food lover, might think about food more often throughout the day. They might think ahead about what they are going to eat for lunch or dinner and get excited about it. They will have cravings for certain foods and really enjoy eating their favorite dishes.
             </p> <br><br>
-            <a class="link-btn" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Contact me</a>
+            <a class="link-btn" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Visit Portfolio</a>
         </div>
     </div>
     </section>
@@ -97,15 +97,15 @@
         </div>
         <div id="bordering" class="flexible alignment">
             <div class="social-media-box">
-                <h1 class="black-heading">700k</h1>
+                <h1 class="color-heading">700k</h1>
                 <p>Youtube Subscribers</p>
             </div>
             <div class="social-media-box">
-                <h1 class="black-heading">2.4m</h1>
+                <h1 class="color-heading">2.4m</h1>
                 <p>Instagram Followers</p>
             </div>
             <div class="social-media-box">
-                <h1 class="black-heading">100k</h1>
+                <h1 class="color-heading">100k</h1>
                 <p>Dribbble Shot Likes</p>
             </div>
 
