--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section class="flexible background-add">
         <div class="image-box">
-            <img class="image" src="images/Person Image.png" alt="Person.png">
+            <img class="image" src="images/IMG_20201002_185903-removebg-preview.png" alt="Person.png">
 
         </div>
         <div class="text-box">
