social media icon added

--- a/index.html
+++ b/index.html
@@ -110,6 +110,22 @@
             </div>
 
         </div>
+
+
+
+        <div class="social-icons">
+            <ul>
+                <li><img class="icon" src="icon/thumb-up.png""></li>
+                <li><img class="icon" src="icon/twitter.png" alt=""></li>
+                <li><img class="icon" src="icon/instagram.png" alt=""></li>
+            </ul>
+
+        </div>
+    
+
+
+
+
     </section>
 
     <footer>
