final version updated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Network</title>
+    <title>Food Network Assignment</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -17,8 +17,16 @@
 </head>
 
 <body>
-    <section>
 
+
+
+
+    <!-- 1st section of the page -->
+
+
+    <!-- Navigation bar added to the page -->
+
+    <section>
 
         <div>
             <div class="menu">
@@ -27,7 +35,8 @@
                     <li class="active">Home</li>
                     <li>Services</li>
                     <li>Product</li>
-                    <li><a id="link-portfolio" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Contact</a></li>
+                    <li><a id="link-portfolio" target="_blank"
+                            href="https://rajibhasan01.github.io/rajib-portfolio/">Contact</a></li>
                     <li><a class="signup-btn" href="#"> <span> Sign Up</span></a></li>
                 </ul>
             </div>
@@ -35,99 +44,166 @@
 
 
 
+        <!-- 1st Image and text added to the page -->
 
 
         <div class="flexible">
-        <div class="text-box">
-            <h1>
-                <span class="add-text-color">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network
-            </h1>
-            <p>
-                <q> <span id="quotes"> <strong> People who love to eat are always the best people.</q> - Julia Child </strong> </span><br> <br> Eating changes everything. You don’t plan your day according to time, but what meal you’ll be eating next. Nothing should come in the way of that.
-            </p> <br>
-            <a class="link-btn" target="_blank" href="https://www.foodpanda.com.bd">Order Food</a>
 
-        </div>
-        <div class="image-box">
-            <img id="image-logo" src="images/Group 8425.png" alt="">
+
+            <div class="text-box">
+                <h1>
+                    <span class="add-text-color">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network
+                </h1>
+                <p>
+                    <q> <span id="quotes"> <strong> People who love to eat are always the best people.</q> - Julia Child
+                    </strong> </span><br> <br> Eating changes everything. You don’t plan your day according to time, but
+                    what meal you’ll be eating next. Nothing should come in the way of that.
+                </p> <br>
+                <a class="link-btn" target="_blank" href="https://www.foodpanda.com.bd">Order Food</a>
+            </div>
+
+
+            <div class="image-box">
+                <img id="image-logo" src="images/Group 8425.png" alt="">
+
+            </div>
+
 
         </div>
     </section>
+
+
+
+
+
+    <!-- 2nd section of the page -->
+
+
+    <!-- 2nd picture with background image and text added to the page -->
+
 
     <section class="flexible background-add">
+
         <div class="image-box">
             <img class="image" src="images/IMG_20201002_185903-removebg-preview.png" alt="Person.png">
-
         </div>
+
+
         <div class="text-box">
             <h2>My Opinion</h2>
-            <p>In my opinion, a food lover is someone who enjoys to eat (I am a food lover). A food lover, compared to a non food lover, might think about food more often throughout the day. They might think ahead about what they are going to eat for lunch or dinner and get excited about it. They will have cravings for certain foods and really enjoy eating their favorite dishes.
+            <hr>
+            <p>In my opinion, a food lover is someone who enjoys to eat (I am a food lover). A food lover, compared to a
+                non food lover, might think about food more often throughout the day. They might think ahead about what
+                they are going to eat for lunch or dinner and get excited about it. They will have cravings for certain
+                foods and really enjoy eating their favorite dishes.
             </p> <br><br>
-            <a class="link-btn" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Visit Portfolio</a>
+            <a class="link-btn" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Visit
+                Portfolio</a>
         </div>
-    </div>
+
     </section>
 
+
+
+
+    <!-- 3rd section of the page -->
+
+
+
+
     <section>
+
         <h2 class="alignment">My Recipies</h2>
-        <p class="alignment">The largest online collection of professionally-tested recipes, <br> reliable kitchen tips, and mouthwatering daily food content. Come, search, cook, and share.
+        <p class="alignment">
+            The largest online collection of professionally-tested recipes, <br> reliable kitchen tips,
+            and mouthwatering daily food content. Come, search, cook, and share.
         </p>
+
+
         <div class="flexible">
+
+
+            <!-- Recipe part added to the page -->
+
+
             <div class="box-create">
                 <img class="food-image" src="food/Project Cover.jpg" alt="Project Cover">
                 <h3>Waffles | Recipe</h3>
                 <p>
-                    You can keep the batter covered in the fridge for up to a week. Just be sure to whisk well before using again. You may also use whole wheat flour for this recipe.
+                    You can keep the batter covered in the fridge for up to a week. Just be sure to whisk well before
+                    using again. You may also use whole wheat flour for this recipe.
                 </p>
             </div>
+
+
             <div class="box-create">
                 <img class="food-image" src="food/Project Cover1.jpg" alt="Project Cover">
                 <h3>Butter Steak | Recipe</h3>
                 <p>
-                    Sprinkle steak with salt and pepper. In a large skillet, heat remaining butter over medium heat. Add steak, cook until meat reaches your preference desired doneness.
+                    Sprinkle steak with salt and pepper. In a large skillet, heat remaining butter over medium heat. Add
+                    steak, cook until meat reaches your preference desired doneness.
                 </p>
             </div>
+
+
             <div class="box-create">
                 <img class="food-image" src="food/Project Cover.png" alt="Project Cover">
                 <h3>Soup | Recipe</h3>
                 <p>
-                    Be bowled over by our nourishing soups. Our warming recipes range from classic minestrone and vibrant tomato soup to blends such as celeriac, hazelnut and truffle.
+                    Be bowled over by our nourishing soups. Our warming recipes range from classic minestrone and
+                    vibrant tomato soup to blends such as celeriac, hazelnut and truffle.
                 </p>
             </div>
 
+
         </div>
+
+
+        <!-- Social subcriptions details added to the page -->
+
+
         <div id="bordering" class="flexible alignment">
             <div class="social-media-box">
                 <h1 class="color-heading">700k</h1>
                 <p>Youtube Subscribers</p>
             </div>
+
             <div class="social-media-box">
                 <h1 class="color-heading">2.4m</h1>
                 <p>Instagram Followers</p>
             </div>
+
             <div class="social-media-box">
                 <h1 class="color-heading">100k</h1>
                 <p>Dribbble Shot Likes</p>
             </div>
-
         </div>
+
+
+
+
+        <!-- Social icon added to the page -->
 
 
 
         <div class="social-icons">
+
             <ul>
                 <li><img class="icon" src="icon/thumb-up.png""></li>
-                <li><img class="icon" src="icon/twitter.png" alt=""></li>
+                <li><img class=" icon" src="icon/twitter.png" alt=""></li>
                 <li><img class="icon" src="icon/instagram.png" alt=""></li>
             </ul>
 
         </div>
-    
-
-
-
 
     </section>
+
+
+
+
+    <!-- Footer of the page -->
+
+
 
     <footer>
         <h2><span class="add-text-color">FOOD</span> NETWORK</h2>
