socila site link added to the icon

--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
         <div class="social-icons">
 
             <ul>
-                <li><img class="icon" src="icon/thumb-up.png""></li>
-                <li><img class=" icon" src="icon/twitter.png" alt=""></li>
-                <li><img class="icon" src="icon/instagram.png" alt=""></li>
+                <li><a target="_blank" href="http://www.facebook.com"><img class="icon" src="icon/thumb-up.png" alt="fb-image"></a></li>
+                <li><a target="_blank" href="http://www.twitter.com"><img class=" icon" src="icon/twitter.png" alt="twitter-image"></li>
+                <li><a target="_blank" href="http://www.instagram.com"><img class="icon" src="icon/instagram.png" alt="insta-image"></li>
             </ul>
 
         </div>
