fixed link decoration issue and added hover to the btn

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </strong> </span><br> <br> Eating changes everything. You don’t plan your day according to time, but
                     what meal you’ll be eating next. Nothing should come in the way of that.
                 </p> <br>
-                <a class="link-btn" target="_blank" href="https://www.foodpanda.com.bd">Order Food</a>
+                <a class="link-btn" target="_blank" href="https://www.foodpanda.com.bd"> <span> Order Food</span></a>
             </div>
 
 
@@ -97,8 +97,8 @@
                 they are going to eat for lunch or dinner and get excited about it. They will have cravings for certain
                 foods and really enjoy eating their favorite dishes.
             </p> <br><br>
-            <a class="link-btn" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/">Visit
-                Portfolio</a>
+            <a class="link-btn" target="_blank" href="https://rajibhasan01.github.io/rajib-portfolio/"> <span>Visit
+                Portfolio</span></a>
         </div>
 
     </section>
@@ -189,9 +189,9 @@
         <div class="social-icons">
 
             <ul>
-                <li><a target="_blank" href="http://www.facebook.com"><img class="icon" src="icon/thumb-up.png" alt="fb-image"></a></li>
-                <li><a target="_blank" href="http://www.twitter.com"><img class=" icon" src="icon/twitter.png" alt="twitter-image"></li>
-                <li><a target="_blank" href="http://www.instagram.com"><img class="icon" src="icon/instagram.png" alt="insta-image"></li>
+                <li><a style="text-decoration: none;" target="_blank" href="http://www.facebook.com"><img class="icon" src="icon/thumb-up.png" alt="fb-image"></a></li>
+                <li><a style="text-decoration: none;" target="_blank" href="http://www.twitter.com"><img class=" icon" src="icon/twitter.png" alt="twitter-image"></li>
+                <li><a style="text-decoration: none;" target="_blank" href="http://www.instagram.com"><img class="icon" src="icon/instagram.png" alt="insta-image"></li>
             </ul>
 
         </div>
@@ -202,7 +202,6 @@
 
 
     <!-- Footer of the page -->
-
 
 
     <footer>
